--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "publisher": "Exxallency",
+    "publisher": "exxallency",
     "name": "valkyrja-light",
     "displayName": "Valkyrja light",
     "description": "Light theme for Visual Studio Code",
